<resources>
    <string name="app_name">Exemplo1</string>
    <string name="acessar">Acessar</string>
    <string name="seja_bem_vindo">Seja bem vindo!</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="ordem_de_servi_os">Ordem de Serviços</string>
    <string name="tarefas">Tarefas</string>
    <string name="clientes">Clientes</string>
    <string name="cadastro_de_cliente">Cadastro de Cliente</string>
    <string name="salvar">Salvar</string>
    <string name="ativo">Ativo</string>
    <string name="celular">Celular</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade</string>
    <string name="endereco">Endereço</string>
    <string name="nome">Nome</string>
    <string name="cadastro_de_usuario">Cadastro de Usuario</string>
    <string name="email">Email</string>
    <string name="usuarios">Usuarios</string>
    <string name="user_invalid">Usuario ou senha invalidos!</string>
    <string name="welcome">Bem Vindo(a): </string>
    <string name="lembrar_login">Lembrar Login</string>
    <string name="id">ID</string>
    <string name="adicionar">Adicionar</string>
    <string name="excluir">Excluir</string>
</resources>