<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientRegister">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cadastro_de_cliente"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvCadCliName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/tvCadCliName" />

        <TextView
            android:id="@+id/tvCadCliAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endereco" />

        <EditText
            android:id="@+id/etAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/tvCadCliAddress" />

        <TextView
            android:id="@+id/tvCadCliCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cidade" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/tvCadCliCity" />

        <TextView
            android:id="@+id/tvCadCliPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@id/tvCadCliPhone" />

        <TextView
            android:id="@+id/tvCadCliCellPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celular" />

        <EditText
            android:id="@+id/etCellPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@id/tvCadCliCellPhone" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ativo" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />
    </LinearLayout>


</LinearLayout>